--- a/Backend/templates/index.html
+++ b/Backend/templates/index.html
@@ -48,9 +48,10 @@
     <!-- Formular zum Hochladen von Dateien -->
     <form method="POST" enctype="multipart/form-data">
         {{ upload_form.hidden_tag() }}
-        {{ upload_form.file.label }}: {{ upload_form.file() }}
+        {{ upload_form.file.label }}: <input type="file" name="{{ upload_form.file.name }}" accept="application/pdf">
         {{ upload_form.submit() }}
     </form>
+
 
 </body>
 </html>
