--- a/Backend/templates/chat.html
+++ b/Backend/templates/chat.html
@@ -5,17 +5,19 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="{{url_for('static', filename='css/chat_styles.css')}}">
+        <link rel="icon" type="image/png" href="{{url_for('static', filename='images/favicon-16x16.png')}}" sizes="16x16" />
         <title>Chat with PDF</title>
     </head>
     <body>
-        <a href="/">Back</a>
         
         <div class="container">
             <div class="header">
                 <h1>Chat with your PDF</h1>
+                <a href="/">Back</a>
             </div>
             <div class="main-content">
                 <iframe class="PDF-view" src="{{ file_path }}.pdf#toolbar=0&navpanes=0&view=FitH" frameborder="0"></iframe>
+                <iframe class="chat-interface" src="https://mikamartin-pdf-chatbot.hf.space" frameborder="0"></iframe>
             </div>
         </div>
         <script src="{{ url_for('static', filename='/scripts/script.js') }}"></script>
